// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell renders correctly when alive 1`] = `
<button
  aria-label="0, 0: alive"
  className="cell alive"
  onClick={[Function]}
  onMouseEnter={[Function]}
  style={
    Object {
      "backgroundColor": "hsl(0, 100%, 50%)",
    }
  }
  title="0, 0"
/>
`;

exports[`Cell renders correctly when not alive 1`] = `
<button
  aria-label="0, 0: dead"
  className="cell dead"
  onClick={[Function]}
  onMouseEnter={[Function]}
  style={
    Object {
      "backgroundColor": "#222",
    }
  }
  title="0, 0"
/>
`;
